src/passes/02-parsing/jsligo/Tests/contracts/negative/dynamic_entry_wrong_storage.ts
type storage =
  {
    storage : int;
    dynamic_entrypoints;
    extra : int
  }

class C {
  @entry
  foo = (_u : unit, _storage : storage) : [list<operation>, storage] =>
    failwith ()
};
